tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/direct-unaryexpression-void-unaryexpression-1.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/unaryexpression-void-unaryexpression-1.case
// - src/assignment-target-type/invalid/direct.template
/*---
description: Static Semantics AssignmentTargetType, Return invalid (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment

    UnaryExpression: void UnaryExpression
    Static Semantics AssignmentTargetType, Return invalid

---*/

$DONOTEVALUATE();

void 1 = 1;
